Consistent spring config across modules